[package]
name = "bytepiece-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
rand = "0.8.5"
indicatif = {features = ["rayon"], version = "0.17.8"}
rayon = "1.10.0"
regex = "1.11.1"
unicode-normalization = "0.1.24"
base64 = "0.22.1"
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
ndarray = "0.16.1"